# Papaya

./: CMakeLists.txt  README.md  glad.c  glad.h  main.c  resources.geresource.c  resources.geresource.xml
shaders/general/: graph.frag  radial.frag  slice.frag
shaders/orbitals/harmonic/: 00.frag  1-1.frag  10.frag  11.frag  2-1.frag  2-2.frag  20.frag  21.frag  22.frag
shaders/orbitals/radial/: 10.frag  20.frag  21.frag  30.frag  31.frag  32.frag
